@@ -1,3 +1,7 @@
+2004-02-25 Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp: Fixed little bug with volume sliders.
+	
 2004-02-24 Damien Sandras  <dsandras@seconix.com>
 
 	* src/main_window.cpp: Debug output now presents date and time.
